# GenreUpdater

./: .coverage 2  .coverage 3  .coverage 4  .gitignore  .pre-commit-config.yaml  .sourcery.yaml  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEVELOPMENT_WORKFLOW.md  LICENSE  README.md  RENAME_PLAN.md  SECURITY.md  artist-renames.yaml  benchmark_fetch_by_ids.py  codecov.yml  config.yaml  main.py  mkdocs.yml  my-config.yaml  pyproject.toml  qodana.yaml  requirements.txt  run_tests_with_allure.sh  vulture_whitelist.py
.claude/skills/: mermaid-diagrams.md
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  claude-code-review.yml  claude.yml  codeql.yml  dependabot-auto-merge.yml  diagnose-failures.yml  diagnostics.yml  docs-audit.yml  docs.yml  mutation-testing.yml  nightly.yml  pages.yml  qodana_code_quality.yml  regression.yml  render-diagrams.yml  tests-integration.yml
.mermaid/: config.json
.trunk/: trunk.yaml
.trunk/configs/: .flake8
applescripts/: batch_update_tracks.applescript  count_modifiable_tracks.applescript  fetch_track_ids.applescript  fetch_track_summaries.scpt  fetch_tracks.applescript  fetch_tracks.scpt  fetch_tracks_by_ids.applescript  fetch_tracks_by_ids.scpt  update_property.applescript
docs/: PROJECT_INDEX.md  __init__.py  changelog.md  contributing.md  gen_diagrams.py  gen_ref_pages.py  index.md  smart_delta.md
docs/2025-01-15/: progress.md
docs/api/: index.md
docs/api/app/: cli.md  features.md  index.md  orchestrator.md
docs/api/core/: config.md  dry_run.md  genre_manager.md  logger.md  track_processor.md  utils.md  year_retriever.md
docs/api/metrics/: analytics.md  index.md  reports.md
docs/api/models/: protocols.md  track.md
docs/api/services/: api_clients.md  apple.md  applescript.md  cache.md  snapshot.md  verification.md
docs/architecture/: caching.md  data-flow.md  overview.md
docs/getting-started/: configuration.md  installation.md  quickstart.md
docs/guide/: automation.md  cli.md  faq.md  genres.md  troubleshooting.md  years.md
docs/javascripts/: mermaid-theme.js
docs/mutation-dashboard/: index.html
docs/plans/: 2025-12-24-alternative-search-design.md  2025-12-24-alternative-search-implementation.md  2026-02-13-decompose-god-classes-design.md
docs/stylesheets/: ayu.css
launchctl/: SERVICE_README.md  com.music.genreautoupdater.plist  manage_service.sh
scripts/: check_critical_params.sh  create_issue.py  diagnose_failures.py  import_mappings.txt  migrate_csv_headers.py  sync-diagnostics.sh
src/: __init__.py
src/app/: __init__.py  app_config.py  cli.py  config.py  full_sync.py  genre_update.py  helpers.py  music_updater.py  orchestrator.py  pipeline_helpers.py  pipeline_snapshot.py  track_cleaning.py  updater.py  year_update.py
src/application/: cli.py  config.py  full_sync.py  helpers.py  music_updater.py  orchestrator.py
src/core/: __init__.py  analytics_decorator.py  apple_script_names.py  cli.py  config.py  core_config.py  debug.py  debug_utils.py  dry_run.py  full_sync.py  helpers.py  logger.py  music_updater.py  orchestrator.py  retry.py  retry_handler.py  run_tracking.py
src/core/models/: __init__.py  album_type.py  cache_types.py  metadata.py  metadata_utils.py  normalization.py  protocols.py  script_detection.py  search_strategy.py  status.py  track_models.py  track_status.py  types.py  validators.py  year_repair.py
src/core/modules/: __init__.py
src/core/tracks/: __init__.py  artist.py  artist_renamer.py  base.py  batch_fetcher.py  cache_manager.py  filter.py  genre.py  genre_manager.py  incremental_filter.py  prerelease_handler.py  processor.py  track_base.py  track_delta.py  track_processor.py  track_updater.py  track_utils.py  update_executor.py  year.py  year_batch.py  year_consistency.py  year_determination.py  year_fallback.py  year_retriever.py  year_utils.py
src/core/utils/: __init__.py  datetime_utils.py  icloud_cleanup.py
src/domain/tracks/: __init__.py  artist_renamer.py  base_processor.py  genre_manager.py  incremental_filter.py  track_processor.py  year_retriever.py
src/infrastructure/: applescript_client.py  dependencies_service.py  pending_verification.py  track_delta_service.py
src/infrastructure/api/: __init__.py  applemusic.py  base.py  discogs.py  lastfm.py  musicbrainz.py  orchestrator.py
src/infrastructure/cache/: __init__.py  album_cache_service.py  cache_utils.py  (+9 more)
src/metrics/: __init__.py  analytics.py  change_reports.py  csv_utils.py  html_reports.py  monitoring.py  reports.py  track_sync.py
src/services/: __init__.py  apple.py  apple_executor.py  apple_file_validator.py  applescript_client.py  delta.py  dependencies_service.py  dependency_container.py  pending.py  pending_verification.py  track_delta_service.py
src/shared/: debug.py
src/stubs/: __init__.py
src/typings/: __init__.py
src/utils/: __init__.py
stubs/mkdocs_gen_files/: __init__.pyi
swift-helper/: .gitignore  Package.swift  build.sh
tests/: __init__.py  conftest.py  factories.py  test_docs.py  types.py
tests/cache_service/: __init__.py  test_api_compat.py  test_baseline_behavior.py
tests/e2e/: __init__.py  test_batch_processing.py  test_cli.py  test_cli_allure.py  test_full_pipeline.py  test_full_pipeline_allure.py
tests/integration/: conftest.py  test_alternative_search.py  test_genre_pipeline.py  test_genre_pipeline_allure.py  test_incremental_pipeline.py  test_incremental_pipeline_allure.py  test_music_updater_snapshot.py  test_year_pipeline.py  test_year_pipeline_allure.py  test_year_plausibility_integration.py
tests/mocks/: __init__.py  csv_mock.py  protocol_mocks.py  track_data.py
tests/regression/: __init__.py  conftest.py  test_data_quality.py  test_genre_logic.py  test_genre_manager_edge_cases.py  test_issue_72_year_plausibility.py  test_known_issues.py  test_year_determination_edge_cases.py  test_year_logic.py
tests/unit/: test_csv_benchmark.py
tools/: generate_swift_fixtures.py
tools/git-hooks/: commit-msg
tools/scripts/: run_tests_with_allure.sh
(+315 files in other folders)
