[build-system]
requires = ["setuptools>=67", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "music-genre-updater"
version = "3.0.0"
description = "Automated music genre updater for Apple Music"
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.13"
license = { text = "MIT" }
authors = [{ name = "Roman Borodavkin" }]
keywords = ["music", "apple-music", "genre", "automation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: macOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    # Runtime only
    "pydantic==2.12.5",
    "python-dotenv==1.2.1",
    "pyyaml==6.0.3",
    "aiohttp==3.13.3",
    "certifi==2026.1.4",
    "cryptography==46.0.4",
    "orjson==3.11.7",
    "rich==14.3.2",
    "psutil==7.2.2",
    "pygithub==2.8.1",
]

[dependency-groups]
dev = [
    # Documentation
    "mkdocs>=1.6",
    "mkdocs-material>=9.5",
    "mkdocstrings[python]==1.0.2",
    "mkdocs-gen-files>=0.6.0",
    "mkdocs-api-autonav>=0.4.0",
    "mkdocs-git-revision-date-localized-plugin>=1.5",
    "pytest-examples>=0.0.14",
    "pydoclint>=0.8.3",
    # Linting & formatting
    "ruff==0.15.0",
    "ty==0.0.15",
    "basedpyright==1.37.4", # IDE support - ty is used for pre-commit
    "sourcery==1.43.0; sys_platform == 'darwin'", # macOS only
    "bandit==1.9.3",
    "pip-audit==2.10.0",
    # Testing
    "pytest>=9.0.2",
    "pytest-asyncio==1.3.0",
    "pytest-xdist==3.8.0",
    "pytest-cov==7.0.0",
    "coverage==7.13.3",
    "pytest-html==4.2.0",
    "pytest-sugar==1.1.1",
    "hypothesis==6.151.5",
    # Type stubs & tools
    "types-pyyaml==6.0.12.20250915",
    "cst-lsp==0.1.3",
    "deptry==0.24.0",
    "pre-commit==4.5.1",
    "pytest-rerunfailures>=16.1",
    "deadcode>=2.4.1",
    "pylint>=4.0.4",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.uv]
# uv configuration
index-url = "https://pypi.org/simple"

# Development scripts are handled separately - removed invalid config

[tool.ruff]
line-length = 150
indent-width = 4
exclude = [
    ".git",
    ".venv",
    "build",
    "dist",
    "__pycache__",
    "*/__init__.py",
]

# Assume Python 3.13+
target-version = "py313"

[tool.ruff.lint]
# Enable pycodestyle (`E`) and Pyflakes (`F`) codes by default.
select = [
    "E",
    "W",
    "F",
    "N",
    "UP",
    "YTT",
    "ANN",
    "S",
    "BLE",
    "B",
    "A",
    "COM",
    "C4",
    "DTZ",
    "T10",
    "EM",
    "EXE",
    "FA",
    "ISC",
    "ICN",
    "G",
    "INP",
    "PIE",
    "T20",
    "PYI",
    "PT",
    "Q",
    "RSE",
    "RET",
    "SLF",
    "SIM",
    "TID",
    "TC",
    "INT",
    "ARG",
    "PTH",
    "ERA",
    "PD",
    "PGH",
    "PL",
    "TRY",
    "FLY",
    "NPY",
    "PERF",
    "RUF",
]
ignore = [
    "F841", # Allow unused variables when they start with an underscore
    "N806", # Allow non-lowercase variable names (for compatibility with existing code)
    "N803", # Allow non-snake-case function names (for compatibility with existing code)
    "S101", # Allow use of assert statements (common in data validation)
    "T201", # Allow print statements (for CLI output)
    "FIX002", # Allow TODO comments
    "BLE001", # Allow broad exception catching in some cases
    "C901", # Ignore complexity warnings for now (refactor later)
    "PLR0912", # Allow too-many-branches (refactor later)
    "PLR0913", # Allow too-many-arguments (refactor later)
    "PLR0915", # Allow too-many-statements (refactor later)
    "ISC001", # Allow implicit string concatenation (conflicts with formatter)
    "COM812", # Allow trailing comma conflicts with formatter
    "COM819", # Allow multiline string in parentheses (conflicts with formatter)
    "PLR2004", # Allow magic values in tests and configs
    "TC006", # PyCharm compatibility: Allow types without quotes in cast() - PyCharm expects actual types
    "ANN401", # Allow Any types in existing code (gradual migration)
    "G004", # Allow f-strings in logging (performance is fine for this use case)
    "PTH110", # Allow os.path usage alongside pathlib (gradual migration)
    "TRY300", # Allow TRY patterns for existing error handling
    "TRY301", # Allow TRY patterns for existing error handling
    "TRY401", # Allow datetime without timezone for internal timestamps
    "DTZ006", # Allow datetime without timezone for internal timestamps
    "DTZ007", # Allow datetime without timezone for internal timestamps
]

# Allow autofix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

[tool.ruff.format]
quote-style = "double"                 # Like Black, use double quotes for strings.
indent-style = "space"                 # Like Black, indent with spaces, rather than tabs.
skip-magic-trailing-comma = false      # Like Black, respect magic trailing commas.
line-ending = "auto"                   # Like Black, automatically detect the appropriate line ending.
docstring-code-format = true           # Reformat code blocks in docstrings.
docstring-code-line-length = "dynamic" # Like Black, wrap docstring code blocks to the configured line length.

[tool.ruff.lint.pylint]
max-returns = 8  # Allow 8 returns for decision tree patterns (default: 6)

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "PLR2004", # Tests can use magic values
    "S101", # Tests can use assertions
    "PLR0913", # Tests can have many arguments
    "SLF001", # Tests can access private members
    "S108", # Tests can use /tmp/ paths (mocked configs, fixtures)
    "PT011", # Tests can use explicit default argument values for clarity
    "ARG001", # Tests can have unused function arguments (mocks)
    "ARG005", # Tests can have unused lambda arguments
    "TC002", # Tests can have third-party imports outside TYPE_CHECKING
    "TC003", # Tests can have stdlib imports outside TYPE_CHECKING
    "PLC0415", # Tests can have imports inside functions
    "PLC2701", # Tests can import private names (internal functions)
    "PT012", # Tests can have complex pytest.raises blocks
    "TRY003", # Tests can have long exception messages
    "EM101", # Tests can use string literals in exceptions
    "EM102", # Tests can use f-strings in exceptions
    "B007", # Tests can have unused loop variables
    "DTZ005", # Tests can use datetime.now() without tz
    "ANN001", # Tests can skip argument annotations
    "ANN202", # Tests can skip return annotations for private funcs
    "RUF059", # Tests can have unused unpacked variables
    "E501", # Tests can have longer lines for readability
    "S603", # Tests can run subprocess with resolved tool paths (shutil.which)
]
"src/core/models/metadata_utils.py" = [
    "PLW0108", # Lambda intentional: key=len makes ty infer Sized instead of str
]
"src/services/api/orchestrator.py" = [
    "TC006", # PyCharm compatibility: Allow types without quotes in cast() - PyCharm expects actual types
]
"src/core/models/script_detection.py" = [
    "RUF001", # Allow ambiguous Unicode (intentional for script detection examples)
    "RUF002", # Allow ambiguous Unicode in docstrings
    "RUF003", # Allow ambiguous Unicode in comments
]
"docs/*.py" = [
    "S603", # subprocess calls use hardcoded trusted paths from constants
    "INP001", # docs/ is a namespace package for mkdocs gen-files plugin
]

[tool.pydoclint]
style = "google"
arg-type-hints-in-docstring = false
check-return-types = false
require-return-section-when-returning-nothing = false

# ty configuration - Fast type checker from Astral (Ruff/uv team)
[tool.ty.environment]
python-version = "3.13"
python = ".venv"
extra-paths = ["src"]

[tool.ty.src]
exclude = [
    "**/tests/**",
    "**/.venv/**",
    "**/venv/**",
    "**/__pycache__/**",
]

[tool.ty.rules]
# Warn on unresolved imports but don't fail (external packages may lack stubs)
unresolved-import = "warn"

[tool.pyright]
include = ["src", "main.py", "tests", "docs"]
extraPaths = ["src"]
stubPath = "stubs"
exclude = ["venv", "**/__pycache__", "**/node_modules"]
venvPath = "."
venv = ".venv"
pythonVersion = "3.13"
typeCheckingMode = "basic"
reportMissingImports = true
reportMissingTypeStubs = false
reportUnusedImport = true
reportUnusedClass = "warning"
reportUnusedFunction = "warning"
reportUnusedVariable = "warning"
reportGeneralTypeIssues = true
reportOptionalSubscript = true
reportOptionalMemberAccess = true
reportOptionalCall = true
reportOptionalIterable = true
reportOptionalContextManager = true
reportOptionalOperand = true

# Disable walrus operator suggestions to avoid conflicts
reportUnnecessaryComparison = false
reportUnnecessaryContains = false

# PyCharm compatibility: Allow cast() calls for type clarity even when "unnecessary"
reportUnnecessaryCast = false

# Pydantic v2: Standard type checking
reportDeprecated = true
reportIncompatibleMethodOverride = true

# ─────────────────────────────────────────────────────────────────────────────

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
pythonpath = ["src"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-ra",
    "-n", "auto", # Parallel test execution (pytest-xdist)
    "--strict-markers",
    "--ignore=venv",
    "--ignore=.venv",
    "--ignore=.trunk",
    # Visual reporting options
    "--html=reports/html/report.html",
    "--self-contained-html",
    "--cov=src",
    "--cov-report=html:reports/html/coverage",
    "--cov-report=term-missing",
    "--cov-fail-under=75",
    "--tb=short",
    "-v",
]
asyncio_mode = "auto"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
    "e2e: marks tests as end-to-end tests",
    "regression: marks tests as regression tests using real library data",
]

# ─────────────────────────────────────────────────────────────────────────────
# Coverage configuration
# ─────────────────────────────────────────────────────────────────────────────
[tool.coverage.run]
source = ["src"]
parallel = true  # Required for pytest-xdist + coverage
branch = true    # Measure branch coverage
omit = [
    "**/tests/*",
    "**/test_*.py",
    "**/__pycache__/*",
    "**/venv/*",
    "**/.venv/*",
    "**/site-packages/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

[tool.sourcery]
python_version = "3.13"

# ─────────────────────────────────────────────────────────────────────────────
# Bandit configuration - Security linting
# ─────────────────────────────────────────────────────────────────────────────
[tool.bandit]
skips = ["B101", "B105", "B311", "B404", "B603"]
# B101: Allow assert for type narrowing
# B105: "password_configured" is a status flag, not a password
# B311: random.uniform used for jitter, not security
# B404: subprocess module is required for AppleScript
# B603: shell=False is safe (we control the command)

# ─────────────────────────────────────────────────────────────────────────────
# Deadcode configuration - Dead code detection
# ─────────────────────────────────────────────────────────────────────────────
[tool.deadcode]
exclude = [
    "tests",
    "src/core/models/protocols.py", # Protocol definitions (duck typing)
]
# Ignore decorated functions (called dynamically via decorators)
ignore-definitions-if-decorated-with = [
    "track_instance_method",
    "pytest.fixture",
]
# Ignore known entry points and dynamic patterns
ignore-names = [
    "main",
    # CLI/Orchestrator entry points (called from main.py)
    "Orchestrator",
    "Config",
    "CLI",
    "run_command",
    "parse_args",
    # DryRun variants (used conditionally)
    "DryRun*",
    # Test helper methods (exposed for testing, called from tests/)
    "test_*",
    # Protocol/interface implementations (called via duck typing)
    "get_actions",
    "is_script_type",
    "is_primarily_cyrillic",
    "get_all_scripts",
    # Validators used only in tests
    "validate_track_ids",
    "validate_artist_name",
    "validate_album_name",
    # Analytics methods used in tests and main.py
    "execute_wrapped_call",
    "clear_old_events",
    "merge_with",
    "generate_reports",
    # DependencyContainer accessors (used in tests)
    "get_analytics",
    "get_error_logger",
    "get_console_logger",
]
# Ignore files where all "unused" code is actually used dynamically
ignore-names-in-files = [
    # Pydantic models - fields used during JSON deserialization
    "**/track_models.py",
    "**/musicbrainz.py",
    "**/lastfm.py",
    "**/discogs.py",
    "**/year_scoring.py",
    "**/api_base.py",
    # Constants classes - namespace organization
    "**/change_reports.py",
    "**/cache_config.py",
    # Logger attributes - color constants, filter protocol
    "**/logger.py",
]
